# agentbrain-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/agentbrain_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: test_smoke.py
