[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbrain-mcp"
version = "0.1.0"
description = "MCP server for Agent Brain — cross-source personal memory for any MCP-capable AI client (Claude Code, Claude Desktop, Cursor, Windsurf)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thesh Sritharan", email = "hello@agentbrain.ch" }]
keywords = ["mcp", "memory", "ai", "llm", "personal-brain", "claude", "cursor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
http = ["uvicorn>=0.30.0", "starlette>=0.37.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3"]

[project.scripts]
agentbrain-mcp = "agentbrain_mcp.__main__:main"

[project.urls]
Homepage = "https://agentbrain.ch"
Documentation = "https://agentbrain.ch/docs/mcp"
Repository = "https://github.com/AgentBrainHQ/agentbrain-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/agentbrain_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
